feat: project, publication page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,6 +20,34 @@
   preview={brownian-motion.gif}
 }
 
+@article{kim2024autonomousparking,
+  title={Deep Reinforcement Learning for Autonomous Parking in Complex Environments},
+  author={Kim, Dae-Hun and Lee, Min-Jae and Park, Soo-Hyun},
+  year={2024},
+  pdf={example_pdf.pdf}
+}
+
+@article{choi2025humanoidcontrol,
+  title={Whole-Body Control Framework for Humanoid Robots Using Model Predictive Control},
+  author={Choi, Ji-Won and Han, Seung-Min and Jung, Dae-Hun},
+  year={2025},
+  pdf={example_pdf.pdf}
+}
+
+@article{park2025autonomousfleet,
+  title={Autonomous Fleet Management for Multi-Vehicle Systems Using Edge-Cloud Coordination},
+  author={Park, Sung-Jun and Kim, Dae-Hun and Lee, Hyeon-Seok},
+  year={2025},
+  pdf={example_pdf.pdf}
+}
+
+@article{kim2025robotperception,
+  title={Multi-Modal Perception Framework for Mobile Robots in Dynamic Environments},
+  author={Kim, Kwang-Gi and Choi, Min-Soo and Park, Sung-Jun},
+  year={2025},
+  pdf={example_pdf.pdf}
+}
+
 @article{einstein1950meaning,
   abbr={AJP},
   bibtex_show={true},
@@ -113,3 +141,4 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
+
