feat: 1차 피드백 반영

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,8 @@
   title={Deep Reinforcement Learning for Autonomous Parking in Complex Environments},
   author={Kim, Dae-Hun and Lee, Min-Jae and Park, Soo-Hyun},
   year={2024},
-  pdf={example_pdf.pdf}
+  pdf={example_pdf.pdf},
+  nerfies={https://nerfies.github.io}
 }
 
 @article{choi2025humanoidcontrol,
